--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "shigimcp2020-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shigimcp.github.io/shigimcp2020-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.1.0",
     "gsap": "^3.3.4",
     "hookrouter": "^1.2.3",
     "lodash": "^4.17.15",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
