--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^3.1.0",
-    "gsap": "^3.4.1",
+    "gsap": "^3.4.2",
     "hookrouter": "^1.2.3",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
@@ -17,7 +17,7 @@
     "react-gsap": "^2.2.1",
     "react-moment": "^0.9.7",
     "react-responsive-masonry": "^2.1.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
     "sass": "^1.26.10",
     "typescript": "^3.9.6"
   },
