HEADER: added mobile nav

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-css-burger": "^0.2.0",
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
     "react-moment": "^0.9.7",
