WORK: added modals - work.json: please check/fix links (e.g. mimi) HEADER: still having routing issues (setActiveNavDiv)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^16.13.1",
         "react-gsap": "^2.2.1",
         "react-moment": "^0.9.7",
+        "react-player": "^2.6.2",
         "react-responsive-masonry": "^2.1.0",
         "react-scripts": "^3.4.3",
         "sass": "^1.26.10",
