--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "react-moment": "^0.9.7",
         "react-player": "^2.6.2",
         "react-responsive-masonry": "^2.1.0",
-        "react-scripts": "^3.4.3",
+        "react-scripts": "^3.4.4",
+        "react-three-fiber": "^5.1.2",
         "sass": "^1.26.11",
+        "three": "^0.121.1",
         "typescript": "^3.9.7"
     },
     "scripts": {
