--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
         "gsap": "file:gsap-bonus.tgz",
         "hookrouter": "^1.2.3",
         "lodash": "^4.17.20",
-        "moment": "^2.29.0",
-        "react": "^16.13.1",
+        "moment": "^2.29.1",
+        "react": "^16.14.0",
         "react-css-burger": "^0.2.0",
-        "react-dom": "^16.13.1",
+        "react-dom": "^16.14.0",
         "react-gsap": "^2.2.1",
         "react-moment": "^0.9.7",
         "react-player": "^2.6.2",
         "react-responsive-masonry": "^2.1.0",
-        "react-scripts": "^3.4.3",
-        "sass": "^1.26.11",
+        "react-scripts": "^3.4.4",
+        "react-three-fiber": "^5.1.7",
+        "sass": "^1.29.0",
+        "three": "^0.121.1",
         "typescript": "^3.9.7"
     },
     "scripts": {
