- node modules: pixi.js - NMPF_04852: GSAP PixiPlugin - particles - NMMN_11155: GSAP PixiPlugin - smoke shader - npm run deploy

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lodash": "^4.17.20",
         "moment": "^2.29.1",
         "object-path": "^0.11.5",
+        "pixi.js": "^5.3.3",
         "react": "^16.14.0",
         "react-css-burger": "^0.2.0",
         "react-dom": "^16.14.0",
