--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
         "lodash": "^4.17.20",
         "moment": "^2.29.1",
         "object-path": "^0.11.5",
+        "pixi-particles": "^4.3.0",
         "pixi.js": "^5.3.3",
-        "react": "^16.14.0",
+        "react": "^17.0.1",
         "react-css-burger": "^0.2.0",
-        "react-dom": "^16.14.0",
+        "react-dom": "^17.0.1",
         "react-gsap": "^2.2.1",
         "react-moment": "^0.9.7",
-        "react-player": "^2.6.2",
+        "react-player": "^2.7.0",
         "react-responsive-masonry": "^2.1.0",
         "react-scripts": "^3.4.4",
-        "react-three-fiber": "^5.1.7",
+        "react-three-fiber": "^5.3.3",
         "sass": "^1.29.0",
         "three": "^0.121.1",
         "typescript": "^3.9.7"
