--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "https://shigimcp.github.io/shigimcp2020-react",
+    "_homepage": "https://www.shigimcp.com/shigimcp2020-react",
+    "__homepage": ".",
     "dependencies": {
-        "env-cmd": "^10.1.0",
         "gh-pages": "^3.1.0",
         "gsap": "file:gsap-bonus.tgz",
         "hookrouter": "^1.2.3",
@@ -32,9 +33,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "build:ghpages": "env-cmd -f .env.ghpages npm run deploy",
-        "build:stage": "env-cmd -f .env.stage npm run build && mv build ./Xstage"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": "react-app"
