--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "_homepage": "https://shigimcp.github.io/shigimcp2020-react",
-    "homepage": "https://www.shigimcp.com/shigimcp2020-react",
-    "__homepage": ".",
+    "homepage": "https://www.shigimcp.com",
+    "__homepage": "https://www.shigimcp.com/shigimcp2020-react",
+    "___homepage": ".",
     "dependencies": {
         "gh-pages": "^3.1.0",
         "gsap": "file:gsap-bonus.tgz",
@@ -53,6 +54,7 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^12.7.1"
+        "@testing-library/user-event": "^12.7.1",
+        "npm": "^7.5.6"
     }
 }
