--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "shigimcp2020-react",
     "version": "0.1.0",
     "private": true,
-    "_homepage": "https://shigimcp.github.io/shigimcp2020-react",
-    "homepage": "https://www.shigimcp.com",
+    "_homepage": "https://www.shigimcp.com",
     "__homepage": "https://www.shigimcp.com/shigimcp2020-react",
+    "homepage": "https://shigimcp.github.io/shigimcp2020-react",
     "___homepage": ".",
     "dependencies": {
         "gh-pages": "^3.1.0",
