--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
     "name": "shigimcp2021",
     "version": "0.1.0",
     "private": true,
-    "__homepage": "https://www.shigimcp.com",
-    "_homepage": "https://www.shigimcp.com/shigimcp2021",
+    "_homepage": "https://www.shigimcp.com",
+    "__homepage": "https://www.shigimcp.com/shigimcp2021",
     "homepage": "https://shigimcp.github.io/shigimcp2021",
     "___homepage": ".",
     "dependencies": {
+        "@emotion/react": "^11.4.0",
         "gh-pages": "^3.2.0",
         "gsap": "file:gsap-bonus.tgz",
         "hookrouter": "^1.2.5",
+        "imagesloaded": "^4.1.4",
         "isotope-layout": "^3.0.6",
         "isotope-packery": "^2.0.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
         "object-path": "^0.11.5",
-        "pixi-particles": "^4.3.0",
-        "pixi.js": "^5.3.9",
+        "pixi-particles": "^4.3.1",
+        "pixi.js": "^5.3.10",
         "postcss": "^8.3.0",
         "react": "^17.0.2",
         "react-css-burger": "^0.2.0",
@@ -27,8 +29,9 @@
         "react-player": "^2.9.0",
         "react-responsive-masonry": "^2.1.2",
         "react-scripts": "^4.0.3",
+        "react-spinners": "^0.11.0",
         "react-three-fiber": "^5.3.22",
-        "sass": "^1.34.0",
+        "sass": "^1.34.1",
         "three": "^0.128.0",
         "typescript": "^4.3.2"
     },
@@ -56,9 +59,16 @@
         ]
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.12.0",
+        "@testing-library/jest-dom": "^5.13.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
-        "npm": "^7.15.1"
-    }
+        "npm": "^7.16.0"
+    },
+    "presets": [
+        "@babel/preset-react",
+        "@babel/preset-env"
+    ],
+    "plugins": [
+        "@emotion"
+    ]
 }
